k3s_cluster/base/dmz/alternative-frontends/piped/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: dmz
  labels:
    app: dmz-frontalt-piped
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmz-frontalt-piped
  template:
    metadata:
      labels:
        app: dmz-frontalt-piped
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      serviceAccountName: serviceaccount
      # Ensure PostgreSQL user (uid 70) can write to PVC
      securityContext:
        fsGroup: 70
      containers:
        # ---------- piped-frontend (this is what clients hit) ----------
        - name: frontend
          image: 1337kavin/piped-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: piped-config
          secret:
            secretName: piped-secret
            items:
              - key: config.properties
                path: config.properties
