k3s_cluster/base/dmz/alternative-frontends/piped/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-frontalt-piped
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`piped-api.alt.dmz.home`)
      services:
        - name: dmz-frontalt-piped-service
          port: 6628
    - kind: Rule
      match: Host(`piped-proxy.alt.dmz.home`)
      services:
        - name: dmz-frontalt-piped-service
          port: 6629
    - kind: Rule
      match: Host(`piped.alt.dmz.home`)
      # middlewares:
      #   - name: dmz-middleware-auth-authentik
      services:
        - name: dmz-frontalt-piped-service
          port: 6627
  #tls: {}
